# alpaca-bot-api

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  middleware.rs
src/: action_handler.rs  alpaca.rs  alpaca_web_client.rs  controller.rs  main.rs  match_parser.rs  stock_actions.rs
src/alpaca/: alpaca_web_client.rs
src/controller/: alpaca_web_client.rs
