[package]
name = "alpaca-bot-api"
version = "0.1.0"
authors = ["Alexander Montgomery <evaderxander@gmail.com>"]
edition = "2018"

[dependencies]
router = "0.6.0"
iron = "0.6.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
json = "0.12.0"
rustc-serialize = "0.3"
serde_derive = "1.0.100"
clap = "2.33.0"
log = "0.4.8"
log4rs = "0.8.3"
hyper = "0.12"